# Rust_Crypto_Chat

./: Cargo.toml  README.md
src/: lib.rs
src/client/: clipboard.rs  crypto.rs  handshake.rs  initialization.rs  keyboard.rs  mod.rs  network.rs  notifier.rs  receiver.rs  sounds.rs  ui.rs  utils.rs
