[package]
name = "rust_chat"
version = "0.1.0"
edition = "2021"
[dependencies]
tokio = { version = "1", features = ["full"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
anyhow = "1.0"
tui     = "0.19"
crossterm = "0.25.0"
rand ="0.9.1"
futures-util = "0.3"
base64 = "0.22.1"
chacha20 = "0.9"          # 纯 Rust，无 SIMD 依赖
cipher   = "0.4.4"          # trait，只几 KB
sha2     = "0.10"         # 可选：若想用口令派生 32 字节密钥
unicode-width = "0.2.0"
textwrap      = { version = "0.16.2", default-features = false, features = ["unicode-width"] }
winresource = "0.1.22"
cpal = "0.15"
unicode-segmentation = "1.11"
chrono = "0.4"
once_cell = "1.21.3"
crossbeam-channel = "0.5"
md-5 = "0.10.6"
hex  = "0.4"
rpassword = "7.3"
colored = "3.0.0"
hmac = "0.12.1"
fake = "4.3.0"
arboard = "3.5.0"
image = "0.25.6"
open = "5"
uuid = { version = "1.17.0", features = ["v4"] }
tempfile = "3"
regex = "1.11.1"
clap = { version = "4", features = ["derive"] }
supports-color = "1.3.1"
chacha20poly1305 = "0.10"
hkdf = "0.12"
[target.'cfg(windows)'.dependencies]
windows = { version = "0.52.0", features = [
    "Win32_Foundation",
    "Win32_System_Console",
    "Win32_UI_WindowsAndMessaging"
] }